# Membria

./: .env.example  .gitignore  Cargo.toml  README.md  foundry.toml  package.json  setup-files.ps1  turbo.json
.github/workflows/: ci.yml  test.yml
apps/: README.md
apps/explorer/: README.md
apps/web/: package.json  tailwind.config.ts  tsconfig.json
apps/web/app/: layout.tsx  page.tsx
apps/web/components/: ColdStateViewer.tsx  HotStateDemo.tsx
apps/web/lib/: hotState.ts  wagmi.ts
contracts/: README.md
contracts/script/: CommitHotToCold.s.sol  DeployOffline.s.sol  DeployOnline.s.sol
contracts/src/interfaces/: IColdState.sol  IHotState.sol
contracts/src/offline/: ColdStorage.sol  CommitGateway.sol  FinalityOracle.sol
contracts/src/online/: HotExecutor.sol  HotStorage.sol  HotToken.sol
contracts/test/: CommitFlow.t.sol  HotState.t.sol
da-layer/: README.md
da-layer/celestia-node/: README.md
da-layer/scripts/: post-blob.ts
infra/: Dockerfile.node  docker-compose.yml  prometheus.yml
infra/terraform/: main.tf  user-data.sh
node/: README.md
node/crates/cold-state/: Cargo.toml
node/crates/cold-state/src/: lib.rs
node/crates/commit-engine/: Cargo.toml
node/crates/commit-engine/src/: lib.rs
node/crates/da-client/: Cargo.toml
node/crates/da-client/src/: lib.rs
node/crates/execution/: Cargo.toml
node/crates/execution/src/: lib.rs
node/crates/hot-state/: Cargo.toml
node/crates/hot-state/src/: lib.rs
scripts/: benchmark-tps.sh  commit-hot-to-cold.sh  deploy-contracts.sh  start-node.sh
