[workspace]
members = [
    "node/crates/execution",
    "node/crates/hot-state",
    "node/crates/cold-state",
    "node/crates/da-client",
    "node/crates/commit-engine",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/Perry0404/Membria"
repository = "https://github.com/Perry0404/Membria"
keywords = ["ethereum", "blockchain", "evm", "parallel"]

[workspace.dependencies]
# Reth dependencies
reth = { git = "https://github.com/paradigmxyz/reth", features = ["optimism"] }
reth-primitives = { git = "https://github.com/paradigmxyz/reth" }
reth-db = { git = "https://github.com/paradigmxyz/reth" }
reth-provider = { git = "https://github.com/paradigmxyz/reth" }
reth-revm = { git = "https://github.com/paradigmxyz/reth" }

# Revm for parallel execution
revm = { version = "10.0", features = ["std", "serde"] }
revm-primitives = "5.0"

# Alloy for Ethereum types
alloy-primitives = "0.7"
alloy-rlp = "0.3"
alloy-sol-types = "0.7"

# Async runtime
tokio = { version = "1.37", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Data structures
dashmap = "5.5"
parking_lot = "0.12"

# Cryptography
sha3 = "0.10"
tiny-keccak = { version = "2.0", features = ["keccak"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Testing
proptest = "1.4"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true
